<resources>
    <string name="app_name">BenX</string>
    <string name="user_name">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="reports">Reports</string>
    <string name="other">Other</string>
    <string name="own">Own</string>
    <string name="third_party">Third Party</string>
    <string name="day_activity">Day Activity</string>
    <string name="period_activity">Period Activity</string>
    <string name="location_activity">Location Activity</string>
    <string name="history_surname">Surname</string>
    <string name="history_id_number">Identity Number</string>
    <string name="menu">Menu</string>
    <string name="search_type">Search Type</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="first_name">Your First Names</string>
    <string name="last_name">Your Surname</string>
    <string name="date_of_birth">Your date of birth</string>
    <string name="id_number">Your RSA ID Number / Passport Number</string>
    <string name="your_email">Your E-mail</string>
    <string name="your_gender">Your Gender</string>
    <string name="your_maiden_name">Your Maiden Name (leave blank if does not apply)</string>
    <string name="your_home_number">Your home phone number</string>
    <string name="your_work_number">Your work phone number</string>
    <string name="your_cell_number">Your cell / mobile number</string>
    <string name="your_country">Your country of residence</string>
    <string name="about_us">Where did you hear about us?</string>
    <string name="submit">Submit</string>
    <string name="after_submission">Once you have submitted the personal details, we will search our existing unclaimed benefit database and email you the results of the search within 72 hours. In addition we will retain your details and check against all new unclaimed benefit records received in future.</string>
    <string name="dob_hint">DOB</string>
    <string name="ensure_number_provided">Please ensure at least one contact number is provided.</string>
</resources>
