<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@id/btn_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/layout_margin_left_start"
        android:layout_marginStart="@dimen/layout_margin_left_start"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:textSize="@dimen/layout_contact_logout_text_size"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/contacts" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_header_text_margin_top"
        android:text="@string/search_type"
        android:textSize="@dimen/layout_header_text_size"/>

    <Button
        android:id="@id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/btn_contacts"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:textSize="@dimen/layout_contact_logout_text_size"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/logout" />

    <Button
        android:id="@id/btn_own"
        android:layout_width="@dimen/menu_layout_long_button_width"
        android:layout_height="@dimen/menu_layout_long_button_height"
        android:layout_alignLeft="@+id/btn_contacts"
        android:layout_alignStart="@+id/btn_contacts"
        android:layout_below="@+id/btn_contacts"
        android:layout_marginTop="@dimen/menu_buttons_layout_margin_top"
        android:text="@string/own"
        android:textSize="@dimen/menu_buttons_long_text_size"
        android:background="@drawable/button_bg_rounded_corners"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:gravity="center"/>

    <Button
        android:id="@id/btn_third_party"
        android:layout_width="@dimen/menu_layout_long_button_width"
        android:layout_height="@dimen/menu_layout_long_button_height"
        android:layout_alignLeft="@+id/btn_own"
        android:layout_alignStart="@+id/btn_own"
        android:layout_below="@+id/btn_own"
        android:textSize="@dimen/menu_buttons_long_text_size"
        android:layout_marginTop="@dimen/menu_buttons_layout_margin_top"
        android:text="@string/third_party"
        android:background="@drawable/button_bg_rounded_corners"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:gravity="center"/>

    <ImageView
        android:layout_width="@dimen/default_205dp"
        android:layout_height="@dimen/default_142dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/default_16dp"
        android:layout_marginRight="@dimen/default_16dp"
        android:src="@drawable/benx_logo"/>

</RelativeLayout>
