<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="datafactory.co.za.benx.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="280dp"
        app:srcCompat="@drawable/benx_round_logo"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:textSize="@dimen/edit_text_size"/>

    <EditText
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_username"
        android:layout_alignStart="@+id/text_username"
        android:layout_below="@+id/text_username"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_alignRight="@+id/text_username"
        android:layout_alignEnd="@+id/text_username"
        android:textSize="@dimen/edit_text_size"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_password"
        android:layout_marginTop="46dp"
        android:onClick="onButtonClick"
        android:text="@string/login"
        android:textSize="25sp"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="38dp"
        android:textSize="25sp"
        android:text="@string/forgot_password"
        android:layout_centerInParent="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimary"/>


</RelativeLayout>
